fixed navigation offset on mobile

--- a/assets/less/oc_mobile.less
+++ b/assets/less/oc_mobile.less
@@ -12,11 +12,6 @@
     width: 135px !important;
     top: -13px !important;
   }
-  .navbar {
-    position: absolute;
-    width: 100%;
-    z-index: 9999;
-  }
   .oc-eval-answers-wrapper {
     padding-left: 5px;
     padding-right: 5px;
